--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Junhyeok Lee | AI Engineer</title>
+  <title>Junhyeok Lee | Research Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="AI Engineer specializing in scalable healthcare AI, biomedical imaging, and biosignal analysis">
+  <meta name="description" content="Research Engineer specializing in scalable healthcare AI across multiple domains: biomedical imaging,
+biosignal analysis, pharmacogenomics, and computational biology.">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
