--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@ biosignal analysis, pharmacogenomics, and computational biology.">
   <header class="hero">
     <div class="hero-container">
       <h1 class="hero-name">Junhyeok Lee</h1>
-      <p class="hero-title">AI Engineer specializing in Healthcare Technology</p>
-      <p class="hero-subtitle">Scalable healthcare AI across biomedical imaging, biosignal analysis, drug response prediction, and high-performance computing</p>
+      <p class="hero-title">Research Engineer, expertise in Healthcare AI</p>
+      <p class="hero-subtitle">Research Engineer specializing in scalable healthcare AI across multiple domains: biomedical imaging,
+        biosignal analysis, pharmacogenomics, and computational biology.</p>
       
       <div class="hero-stats">
         <div class="stat">
