--- a/index.html
+++ b/index.html
@@ -22,41 +22,54 @@ biosignal analysis, pharmacogenomics, and computational biology.">
     </div>
   </nav>
 
-  <header class="hero">
-    <div class="hero-container">
-      <h1 class="hero-name">Junhyeok Lee</h1>
-      <p class="hero-title">Research Engineer, expertise in Healthcare AI</p>
-      <p class="hero-subtitle">Research Engineer specializing in scalable healthcare AI across multiple domains: biomedical imaging,
-        biosignal analysis, pharmacogenomics, and computational biology.</p>
-      
-      <div class="hero-stats">
-        <div class="stat">
-          <span class="stat-number">89%</span>
-          <span class="stat-label">False Positive Reduction</span>
+  
+    <header class="hero">
+        <div class="hero-container">
+        <h1 class="hero-name">Junhyeok Lee</h1>
+        <p class="hero-title">Research Engineer, expertise in Healthcare AI</p>
+        <p class="hero-subtitle">Research Engineer specializing in scalable healthcare AI across multiple domains: biomedical imaging, biosignal analysis, pharmacogenomics, and computational biology.</p>
+        
+        <div class="hero-stats">
+            <div class="stat">
+            <div class="stat-icon">🏥</div>
+            <span class="stat-label">Biomedical Imaging</span>
+            <span class="stat-description">MRI, Ultrasound, CT</span>
+            </div>
+            <div class="stat">
+            <div class="stat-icon">📊</div>
+            <span class="stat-label">Biosignal Analysis</span>
+            <span class="stat-description">ECG, EEG, PPG</span>
+            </div>
+            <div class="stat">
+            <div class="stat-icon">📝</div>
+            <span class="stat-label">Medical Text</span>
+            <span class="stat-description">Clinical Notes, Reports</span>
+            </div>
+            <div class="stat">
+            <div class="stat-icon">🧬</div>
+            <span class="stat-label">Pharmacogenomics</span>
+            <span class="stat-description">Drug Response, Genomics</span>
+            </div>
+            <div class="stat">
+            <div class="stat-icon">🔬</div>
+            <span class="stat-label">Computational Biology</span>
+            <span class="stat-description">RNA-seq, Proteomics</span>
+            </div>
         </div>
-        <div class="stat">
-          <span class="stat-number">98.6%</span>
-          <span class="stat-label">Labeling Reduction</span>
-        </div>
-        <div class="stat">
-          <span class="stat-number">8+</span>
-          <span class="stat-label">Clinical Sites</span>
-        </div>
-      </div>
 
-      <div class="hero-contact">
-        <a href="mailto:june0604@uw.edu" class="contact-link">
-          <i class="fas fa-envelope"></i> june0604@uw.edu
-        </a>
-        <a href="https://linkedin.com/in/junhyeok-lee-5a5995368" target="_blank" class="contact-link">
-          <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-        <a href="https://github.com/junhyeok0604" target="_blank" class="contact-link">
-          <i class="fab fa-github"></i> GitHub
-        </a>
-      </div>
-    </div>
-  </header>
+        <div class="hero-contact">
+            <a href="mailto:june0604@uw.edu" class="contact-link">
+            <i class="fas fa-envelope"></i> june0604@uw.edu
+            </a>
+            <a href="https://linkedin.com/in/junhyeok-lee-5a5995368" target="_blank" class="contact-link">
+            <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+            <a href="https://github.com/born-june04" target="_blank" class="contact-link">
+            <i class="fab fa-github"></i> GitHub
+            </a>
+        </div>
+        </div>
+    </header>
 
   <main>
     <section id="about" class="section">
