--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ biosignal analysis, pharmacogenomics, and computational biology.">
             <div class="stat">
             <div class="stat-icon">📊</div>
             <span class="stat-label">Biosignal Analysis</span>
-            <span class="stat-description">ECG, EEG, PPG</span>
+            <span class="stat-description">Scalogram, Mel-Spectrogram, MFCC, Gammatone Filterbank</span>
             </div>
             <div class="stat">
             <div class="stat-icon">📝</div>
@@ -53,7 +53,7 @@ biosignal analysis, pharmacogenomics, and computational biology.">
             <div class="stat">
             <div class="stat-icon">🔬</div>
             <span class="stat-label">Computational Biology</span>
-            <span class="stat-description">RNA-seq, Proteomics</span>
+            <span class="stat-description">RNA-seq, DEG Analysis</span>
             </div>
         </div>
 
