--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <iframe
  style="width: 100%;"
  height="569"
-  src="https://6cc7d74f-46cb-4da7-94be-d82ce126d9f8.created.app"
+  src="https://born-june04.created.app"
   title="New Project"
   frameBorder="0">
 </iframe>
