--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>J-SMITH Portfolio</title>
+    <title>June Lee Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">J-SMITH</div>
+                <div class="logo">June Lee</div>
                 <nav>
                     <a href="#about">ABOUT</a>
                     <a href="#projects">PROJECTS</a>
@@ -27,25 +27,28 @@
         <!-- Profile Section -->
         <section class="profile-section">
             <div class="profile-image">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=face&auto=format&q=80" alt="Profile">
+                <img src="./picture.jpeg" alt="Profile">
             </div>
             <div class="profile-info">
-                <h1>JOHN SMITH</h1>
+                <h1>Junhyeok Lee</h1>
                 <div class="profile-title">
                     <span>💼</span>
-                    <span>Full Stack Developer @ Tech Solutions</span>
+                    <span>Research Engineer @ Healthcare AI</span>
                 </div>
                 <p class="profile-description">
                     With a strong background in software development, technical leadership, and product innovation, I excel at turning complex challenges into scalable, high-impact solutions— always staying ahead by leveraging the latest technologies and best practices.
                 </p>
                 <div class="location">
                     <span>📍</span>
-                    <span>San Francisco, California</span>
+                    <span>Seattle, Washington</span>
                 </div>
                 <div class="tags">
-                    <span class="tag">Full Stack Developer</span>
-                    <span class="tag">React</span>
-                    <span class="tag">Node.js</span>
+                    <span class="tag">Research Engineer</span>
+                    <span class="tag">Machine Learning</span>
+                    <span class="tag">Biomedical Imaging</span>
+                    <span class="tag">Biosignal Analysis</span>
+                    <span class="tag">Pharmacogenomics</span>
+                    <span class="tag">Computational Biology</span>
                 </div>
                 <div class="action-buttons">
                     <a href="#contact" class="btn btn-primary">CONTACT ME</a>
@@ -79,8 +82,9 @@
 
         <!-- Introduction -->
         <section class="introduction">
-            <p>Hi there! I'm John, Full Stack Developer at Tech Solutions.</p>
-            <p>I am a Software Engineer focused on Web Development, Cloud Architecture, Scalable Applications, and technology that moves business forward.</p>
+            <p>Hi there! I'm June, Research Engineer expertise in Healthcare AI.</p>
+            <p>I am a Research Engineer focused on Healthcare AI across multiple domains: biomedical imaging,
+                biosignal analysis, pharmacogenomics, and computational biology.</p>
         </section>
 
         <!-- Projects Section -->
