--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
         <section class="academic-section">
             <h2>ACADEMIC BACKGROUND</h2>
             <div class="academic-list">
-                <div>- B.S. in Computer Science at Stanford University</div>
-                <div>- M.S. in Software Engineering at UC Berkeley</div>
+                <div>- M.S. in Bioengineering at University of Washington</div>
+                <div>- B.S. in Biomedical Engineering at Hankuk University of Foreign Studies</div>
+                <div>- B.A. in Economics at Hankuk University of Foreign Studies</div>
             </div>
         </section>
 
