--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span>Research Engineer @ Healthcare AI</span>
                 </div>
                 <p class="profile-description">
-                    With a strong background in software development, technical leadership, and product innovation, I excel at turning complex challenges into scalable, high-impact solutions— always staying ahead by leveraging the latest technologies and best practices.
+                    "With a strong background in healthcare technology, research leadership, and clinical innovation, I excel at transforming complex medical challenges into solutions that genuinely improve people's lives— always motivated by the potential to make healthcare more accessible and effective through advanced AI systems."
                 </p>
                 <div class="location">
                     <span>📍</span>
