--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
         <!-- Projects Section -->
         <section id="projects" class="projects-section">
             <div class="project">
-                <h3>🏆 E-Commerce Platform</h3>
-                <p>Built a scalable e-commerce platform with React and Node.js, handling over 10,000 daily transactions. Features include real-time inventory management, secure payment processing, and advanced analytics dashboard. <a href="projects/ecommerce-platform.html">Check project</a></p>
+                <h3>🏆 Tuberculosis Cough Classification</h3>
+                <p>Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives. Collaboration with Prof. Shwetak N. Patel focuses on deploying this technology where it's needed most. <a href="#">Link</a></p>
             </div>
             <div class="project">
-                <h3>🏆 AI Chat Assistant</h3>
-                <p>Developed an intelligent chatbot using OpenAI API and natural language processing. The system can handle customer inquiries, provide product recommendations, and integrate with existing CRM systems. <a href="projects/ai-chat-assistant.html">Check project</a></p>
+                <h3>🏆 Burn Diagnosis AI Challenge</h3>
+                <p>Created an intelligent burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts. This AI tool empowers healthcare providers to deliver better care to burn patients by providing instant, reliable diagnostic support. <a href="#">Link</a></p>
             </div>
             <div class="project">
-                <h3>🏆 Task Management App</h3>
-                <p>Created a collaborative task management application with real-time updates, team collaboration features, and advanced project tracking. Built with React, Firebase, and modern UI/UX principles. <a href="projects/task-management-app.html">Check project</a></p>
+                <h3>🏆 Assistive Communication System for ALS</h3>
+                <p>Built a multimodal communication system that helps ALS patients maintain their voice and connection with loved ones as their condition progresses. By processing speech patterns and enabling alternative communication methods, this technology preserves dignity and quality of life for patients and their families. <a href="#">Link</a></p>
             </div>
-            <p>To get insight into how I can help your business, check out my complete <a href="/portfolio">portfolio</a>.</p>
+            <p>To get insight into how I can help advance healthcare through AI, check out my complete <a href="/portfolio">portfolio</a>.</p>
         </section>
 
         <!-- Professional Journey -->
