--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="projects" class="projects-section">
             <div class="project">
                 <h3>🏆 Tuberculosis Cough Classification</h3>
-                <p>Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives. Collaboration with Prof. Shwetak N. Patel focuses on deploying this technology where it's needed most. <a href="#">Link</a></p>
+                <p>Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives. Collaboration with Prof. Shwetak N. Patel, PhD Candidates Alex Ching, PhD Candidates Cynthia Dong, and MD David Horne focuses on deploying this technology where it's needed most. <a href="#">Link</a></p>
             </div>
             <div class="project">
                 <h3>🏆 Burn Diagnosis AI Challenge</h3>
