--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
         <section id="journey" class="journey-section">
             <h2>PROFESSIONAL JOURNEY</h2>
             <div class="journey-list">
-                <div>- Full Stack Developer @ Tech Solutions · Ongoing</div>
-                <div>- Senior Frontend Developer @ Digital Innovations · 2 years</div>
-                <div>- Software Engineer @ StartupCorp · 1.5 years</div>
-                <div>- Frontend Developer @ WebAgency · 1 year</div>
-                <div>- Junior Developer @ CodeStudio · 8 months</div>
+                <div>- Teaching Assistant @ BIOE 437/537 : Computational Systems Biology · Ongoing</div>
+                <div>- Graduate Student Researcher @ UW Ubicomp Lab · Ongoing</div>
+                <div>- Research Engineer @ Monitor Corporation · 2 years</div>
+                <div>- Research Intern @ HUFS SystemBiology Lab · 2 years</div>
+                <div>- Student Researcher @ HUFSAIM Lab · 6 months</div>
             </div>
         </section>
 
