--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Profile Section -->
         <section class="profile-section">
             <div class="profile-image">
-                <img src="./picture.jpeg" alt="Profile">
+                <img src="./pic.jpeg" alt="Profile">
             </div>
             <div class="profile-info">
                 <h1>Junhyeok Lee</h1>
@@ -89,19 +89,102 @@
 
         <!-- Projects Section -->
         <section id="projects" class="projects-section">
-            <div class="project">
-                <h3>🏆 Tuberculosis Cough Classification</h3>
-                <p>Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives. Collaboration with Prof. Shwetak N. Patel, PhD Candidates Alex Ching, PhD Candidates Cynthia Dong, and MD David Horne focuses on deploying this technology where it's needed most. <a href="#">Link</a></p>
+            <h2>FEATURED PROJECTS</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./tb-project.jpg" alt="TB Cough Classification" />
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>🏆 Tuberculosis Cough Classification</h3>
+                            <span class="project-date">2025</span>
+                        </div>
+                        <p class="project-description">
+                            Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives.
+                        </p>
+                        <div class="project-collaborators">
+                            <small>with Prof. Shwetak N. Patel, Alex Ching, Cynthia Dong, MD David Horne</small>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">Machine Learning</span>
+                            <span class="tag">Healthcare AI</span>
+                            <span class="tag">Signal Processing</span>
+                        </div>
+                        <div class="project-achievements">
+                            <span class="achievement">🎯 Clinical Impact</span>
+                        </div>
+                        <div class="project-actions">
+                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="#" class="btn-source">💻 Source Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./burn-project.jpg" alt="Burn Diagnosis AI" />
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>🏆 Burn Diagnosis AI Challenge</h3>
+                            <span class="project-date">2022</span>
+                        </div>
+                        <p class="project-description">
+                            Created an intelligent burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts.
+                        </p>
+                        <div class="project-collaborators">
+                            <small>Seoul National University Hospital Challenge</small>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">Computer Vision</span>
+                            <span class="tag">Medical AI</span>
+                            <span class="tag">Emergency Medicine</span>
+                        </div>
+                        <div class="project-achievements">
+                            <span class="achievement">🏅 3rd Place</span>
+                        </div>
+                        <div class="project-actions">
+                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="#" class="btn-source">💻 Source Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./als-project.jpg" alt="ALS Communication System" />
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>🏆 Assistive Communication System for ALS</h3>
+                            <span class="project-date">2023</span>
+                        </div>
+                        <p class="project-description">
+                            Built a multimodal communication system that helps ALS patients maintain their voice and connection with loved ones as their condition progresses.
+                        </p>
+                        <div class="project-collaborators">
+                            <small>with Prof. Nam Yoonho</small>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">NLP</span>
+                            <span class="tag">Assistive Technology</span>
+                            <span class="tag">Speech Processing</span>
+                        </div>
+                        <div class="project-achievements">
+                            <span class="achievement">❤️ Patient Impact</span>
+                        </div>
+                        <div class="project-actions">
+                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="#" class="btn-source">💻 Source Code</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="project">
-                <h3>🏆 Burn Diagnosis AI Challenge</h3>
-                <p>Created an intelligent burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts. This AI tool empowers healthcare providers to deliver better care to burn patients by providing instant, reliable diagnostic support. <a href="#">Link</a></p>
+            
+            <div class="portfolio-note">
+                <p>To get insight into how I can help advance healthcare through AI, check out my complete <a href="/portfolio">portfolio</a>.</p>
             </div>
-            <div class="project">
-                <h3>🏆 Assistive Communication System for ALS</h3>
-                <p>Built a multimodal communication system that helps ALS patients maintain their voice and connection with loved ones as their condition progresses. By processing speech patterns and enabling alternative communication methods, this technology preserves dignity and quality of life for patients and their families. <a href="#">Link</a></p>
-            </div>
-            <p>To get insight into how I can help advance healthcare through AI, check out my complete <a href="/portfolio">portfolio</a>.</p>
         </section>
 
         <!-- Professional Journey -->
