FIX profile image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Profile Section -->
         <section class="profile-section">
             <div class="profile-image">
-                <img src="./pic.jpeg" alt="Profile">
+                <img src="./pics/picture.jpeg" alt="Profile">
             </div>
             <div class="profile-info">
                 <h1>Junhyeok Lee</h1>
