ADD trauma project

--- a/index.html
+++ b/index.html
@@ -93,6 +93,36 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="./bti-project.jpg" alt="Brain Trauma Injury Foundation Model" />
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>🏆 Brain Trauma Injury Foundation Model</h3>
+                            <span class="project-date">2025</span>
+                        </div>
+                        <p class="project-description">
+                            building an AI-powered knowledgebase for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. This tool will help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health. The goal is to deliver smarter, evidence-based, and more equitable care for patients with these devastating injuries.
+                        </p>
+                        <div class="project-collaborators">
+                            <small>Harberview Medical Center - Orthopedic / Neurosurgery / Rehabilitation Medicine</small>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">Foundation Model</span>
+                            <span class="tag">Multimodal</span>
+                            <span class="tag">Large Scale</span>
+                        </div>
+                        <div class="project-achievements">
+                            <span class="achievement">🎯 Clinical Impact</span>
+                        </div>
+                        <div class="project-actions">
+                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="#" class="btn-source">💻 Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="./tb-project.jpg" alt="TB Cough Classification" />
                     </div>
                     <div class="project-content">
