FIX profile job

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>Junhyeok Lee</h1>
                 <div class="profile-title">
                     <span>💼</span>
-                    <span>Research Engineer</span> ## @ ~~
+                    <span>Research Engineer</span>
                 </div>
                 <p class="profile-description">
                     "With a strong background in healthcare technology, research leadership, and clinical innovation, I excel at transforming complex medical challenges into solutions that genuinely improve people's lives— always motivated by the potential to make healthcare more accessible and effective through advanced AI systems."
