FIX project collaborators

--- a/index.html
+++ b/index.html
@@ -93,18 +93,19 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./bti-project.jpg" alt="Brain Trauma Injury Foundation Model" />
+                        <img src="./pics/brain_injury.png" alt="Brain Trauma Injury Foundation Model" />
                     </div>
                     <div class="project-content">
                         <div class="project-header">
                             <h3>🏆 Brain Trauma Injury Foundation Model</h3>
-                            <span class="project-date">2025</span>
+                            <span class="project-date">2025 | Ongoing</span>
                         </div>
                         <p class="project-description">
-                            building an AI-powered knowledgebase for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. This tool will help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health. The goal is to deliver smarter, evidence-based, and more equitable care for patients with these devastating injuries.
+                            Building a Foundation Model for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. Project aims to help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health. The projects delivers smarter, evidence-based, and more equitable care for patients with these devastating injuries.
                         </p>
                         <div class="project-collaborators">
-                            <small>Harberview Medical Center - Orthopedic / Neurosurgery / Rehabilitation Medicine</small>
+                            <small>MS Benjamin Han, MS Pari, PhD Rupak Rajachar | UW Bioengineering</small>
+                            <small>MD Diana Wiseman, MD Jamie Ott, MD Heather Barnett, MD Christopher Lewis | Harberview Medical Center - Neurosurgery / Orthopedic / Rehabilitation Medicine</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Foundation Model</span>
@@ -134,7 +135,8 @@
                             Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives.
                         </p>
                         <div class="project-collaborators">
-                            <small>with Prof. Shwetak N. Patel, Alex Ching, Cynthia Dong, MD David Horne</small>
+                            <small>PhD Alex Ching, PhD Cynthia Dong, Prof. Shwetak N. Patel | Paul G. Allen School of Computer Science & Engineering</small>
+                            <small>MD David Horne | Harborview Medical Center</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Machine Learning</span>
