FIX proj. collaborators

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                         <div class="project-collaborators">
                             <small>MS Benjamin Han, MS Pari, PhD Rupak Rajachar | UW Bioengineering</small>
                             <br>
-                            <small>MD Diana Wiseman, MD Jamie Ott, MD Heather Barnett, MD Christopher Lewis | Harberview Medical Center - Neurosurgery / Orthopedic / Rehabilitation Medicine</small>
+                            <small>MD Diana Wiseman | Neurosurgery @ Harberview Medical Center</small>
+                            <br>
+                            <small>MD Jamie Ott, MD Heather Barnett | Orthopedic @ Harberview Medical Center</small>
+                            <br>
+                            <small>MD Christopher Lewis | Rehabilitation Medicine @ Harberview Medical Center</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Foundation Model</span>
@@ -139,9 +143,9 @@
                             Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives.
                         </p>
                         <div class="project-collaborators">
-                            <small>PhD Alex Ching, PhD Cynthia Dong, Prof. Shwetak N. Patel | Paul G. Allen School of Computer Science & Engineering</small>
+                            <small>PhD Alex Ching, PhD Cynthia Dong, PhD Shwetak N. Patel | Paul G. Allen School of Computer Science & Engineering</small>
                             <br>
-                            <small>MD David Horne | Harborview Medical Center</small>
+                            <small>MD David Horne | Pulmonary, Critical Care and Sleep Medicine@ Harborview Medical Center</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Machine Learning</span>
