FIX proj. collaborators

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <span class="project-date">2025 | Ongoing</span>
                         </div>
                         <p class="project-description">
-                            Building a Foundation Model for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. Project aims to help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health. The projects delivers smarter, evidence-based, and more equitable care for patients with these devastating injuries.
+                            Building a Foundation Model for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. Project aims to help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health.
                         </p>
                         <div class="project-collaborators">
                             <small>MS Benjamin Han, MS Pari, PhD Rupak Rajachar | UW Bioengineering</small>
@@ -132,7 +132,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./tb-project.jpg" alt="TB Cough Classification" />
+                        <img src="./pics/tb_cough.png" alt="TB Cough Classification" />
                     </div>
                     <div class="project-content">
                         <div class="project-header">
@@ -164,7 +164,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./burn-project.jpg" alt="Burn Diagnosis AI" />
+                        <img src="./pics/skin_burn.png" alt="Burn Diagnosis AI Challenge" />
                     </div>
                     <div class="project-content">
                         <div class="project-header">
@@ -172,10 +172,16 @@
                             <span class="project-date">2022</span>
                         </div>
                         <p class="project-description">
-                            Created an intelligent burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts.
+                            Created an intelligent skin burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts.
                         </p>
                         <div class="project-collaborators">
-                            <small>Seoul National University Hospital Challenge</small>
+                            <small>BS Woo-jin Jeong, PhD Jeong-hwa Kang | Bioengineering @ Hankuk University of Foreign Studies</small>
+                            <br>
+                            <small>Department of Plastic and Reconstructive Surgery @ Seoul National University Hospital</small>
+                            <br>
+                            <small>Ministry of Science and ICT</small>
+                            <br>
+                            <small>National Information Society Agency @ Korea</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Computer Vision</span>
