FIX proj. collaborators

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             Building a Foundation Model for traumatic brain and spinal injuries that can extract and structure data from medical records and imaging. Project aims to help clinicians categorize injuries, track recovery, and recommend treatment, while also addressing inequities in care by factoring in social determinants of health.
                         </p>
                         <div class="project-collaborators">
-                            <small>MS Benjamin Han, MS Pari, PhD Rupak Rajachar | UW Bioengineering</small>
+                            <small>MS June Lee, MS Benjamin Han, MS Pari, PhD Rupak Rajachar | UW Bioengineering</small>
                             <br>
                             <small>MD Diana Wiseman | Neurosurgery @ Harberview Medical Center</small>
                             <br>
@@ -143,7 +143,7 @@
                             Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives.
                         </p>
                         <div class="project-collaborators">
-                            <small>PhD Alex Ching, PhD Cynthia Dong, PhD Shwetak N. Patel | Paul G. Allen School of Computer Science & Engineering</small>
+                            <small>MS June Lee, PhD Alex Ching, PhD Cynthia Dong, PhD Shwetak N. Patel | Paul G. Allen School of Computer Science & Engineering</small>
                             <br>
                             <small>MD David Horne | Pulmonary, Critical Care and Sleep Medicine@ Harborview Medical Center</small>
                         </div>
@@ -175,7 +175,7 @@
                             Created an intelligent skin burn classification system to help emergency medical professionals make faster, more accurate treatment decisions when every second counts.
                         </p>
                         <div class="project-collaborators">
-                            <small>BS Woo-jin Jeong, PhD Jeong-hwa Kang | Bioengineering @ Hankuk University of Foreign Studies</small>
+                            <small>BS June Lee,BS Woo-Jin Jeong, PhD Jeong-Hwa Kang | Bioengineering @ Hankuk University of Foreign Studies</small>
                             <br>
                             <small>Department of Plastic and Reconstructive Surgery @ Seoul National University Hospital</small>
                             <br>
@@ -200,7 +200,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./als-project.jpg" alt="ALS Communication System" />
+                        <img src="./pics/look_to_speak.webp" alt="ALS Communication System" />
                     </div>
                     <div class="project-content">
                         <div class="project-header">
@@ -211,10 +211,13 @@
                             Built a multimodal communication system that helps ALS patients maintain their voice and connection with loved ones as their condition progresses.
                         </p>
                         <div class="project-collaborators">
-                            <small>with Prof. Nam Yoonho</small>
+                            <small>BS June Lee, BS Oh-Joon Kwon, BS Young-Jin Jeong, BS Chae-Yeon Kim, BS Jeong-Min Lee, PhD. Nam Yoonho | Bioengineering @ Hankuk University of Foreign Studies</small>
                         </div>
                         <div class="project-tags">
                             <span class="tag">NLP</span>
+                            <span class="tag">Speech-to-Text</span>
+                            <span class="tag">Text-to-Speech</span>
+                            <span class="tag">Multimodal</span>
                             <span class="tag">Assistive Technology</span>
                             <span class="tag">Speech Processing</span>
                         </div>
